test-suite/output/Succeed.out
0
     : nat
The command has indeed failed with message:
The reference x was not found in the current environment.
File "./output/Succeed.v", line 7, characters 14-18:
Error:
The term "Prop" has type "Type" while it is expected to have type 
"Prop" (universe inconsistency: Cannot enforce Set+1 <= Prop).

