test-suite/output/Succeed.v

Succeed Check 0.

Succeed Definition x := 0.
Fail Check x.

Fail Succeed Check Prop : Prop.
